--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -613,7 +613,7 @@
     <string name="msg_file_tree">Fichiers</string>
     <string name="msg_swipe_up">Balayez vers le haut pour accéder au contenue de la console, des logs et autres.</string>
     <string name="msg_ide_crashed">AndroidIDE a crashé</string>
-    <string name="msg_report_crash">Merci d'ouvrir une nouvelle Issue sur Gitub avec l'erreur ci-dessous (anglais): </string>
+    <string name="msg_report_crash">Merci d\'ouvrir une nouvelle Issue sur Gitub avec l'erreur ci-dessous (anglais): </string>
     <string name="msg_crash_report_hint">Cliquez sur le bouton ci dessous pour copier les logs et une ouvrir la page des issues.</string>
     <string name="msg_copy_report_action">Copier et signaler</string>
     <string name="msg_reading_bootstrap">Reading bootstrap archive…</string>
