Fix #132: Added a preference to disable visible password input flag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -347,6 +347,8 @@
     <string name="title_format_code">Format code</string>
     <string name="idepref_java_useGoogleStyle_title">Use Google Java Style code formatting</string>
     <string name="idepref_java_useGoogleStyle_summary">Use Google Java Style code formatting configuration for formatting Java source code.</string>
+    <string name="idepref_visiblePassword_title">Visible password flag</string>
+    <string name="idepref_visiblePassword_summary">Use for visible password input type flag in editor. This makes sure that no suggestions are proposed by soft keyboard.</string>
 </resources>
 
 
