--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -87,12 +87,12 @@
     <string name="stop_gradle_daemons">停止Gradle守护进程</string>
     <string name="quick_run_debug">快速运行</string>
     <string name="msg_sync_needed">Gradle文件已改变。请重新编译您的项目来同步依赖和配置项。</string>
-    <string name="msg_task_begin">========== [%s] 任务开始: %s ==========</string>
+    <string name="msg_task_begin" formatted="false">========== [%s] 任务开始: %s ==========</string>
     <string name="preparing">准备中</string>
     <string name="preparing_first">准备中。 第一次编译可能耗费 10&#8211;15 分钟!</string>
     <string name="msg_gradle_terminated">Gradle进程以代码 %1$d退出</string>
     <string name="msg_gradlew_installation_failed">安装Gradle Wrapper失败: %s</string>
-    <string name="msg_installing_gradlew">Gradle Wrapper不可用!\n正在安装默认版本。 如有需要，Gradle v7.3将会被下载</string>
+    <string name="msg_installing_gradlew">Gradle wrapper不可用!\n正在安装默认版本。 如有需要，Gradle wrapper将会被下载</string>
     <string name="msg_getting_daemom_status">正在获取Gradle守护进程状态，请稍等&#8230;</string>
     <string name="msg_daemons_stopped">Gradle守护进程已停止</string>
     <string name="gradle_daemon_status">Gradle守护进程状态</string>
