--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,12 +85,12 @@
     <string name="stop_gradle_daemons">Stop Gradle Daemons</string>
     <string name="quick_run_debug">Quick run</string>
     <string name="msg_sync_needed">Gradle files have changed. Please rebuild your project to sync dependencies and configurations.</string>
-    <string name="msg_task_begin">========== [%s] TASK_BEGIN: %s ==========</string>
+    <string name="msg_task_begin" formatted="false">========== [%s] TASK_BEGIN: %s ==========</string>
     <string name="preparing">Preparing</string>
     <string name="preparing_first">Preparing. First build may take up to 10&#8211;15 minutes!</string>
     <string name="msg_gradle_terminated">Gradle process exited with exit code %1$d</string>
     <string name="msg_gradlew_installation_failed">Failed to install Gradle Wrapper: %s</string>
-    <string name="msg_installing_gradlew">Gradle Wrapper is not available!\nInstalling default one. Gradle v7.3 will be downloaded if necessary.</string>
+    <string name="msg_installing_gradlew">Gradle wrapper is not available!\nInstalling default one. Gradle wrapper will be downloaded if necessary.</string>
     <string name="msg_getting_daemom_status">Getting Daemon status, please wait&#8230;</string>
     <string name="msg_daemons_stopped">Gradle Daemons Stopped</string>
     <string name="gradle_daemon_status">Gradle daemon status</string>
