--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,17 +29,13 @@
     <string name="app_logs">Лог приложения</string>
     <string name="ide_logs">Лог IDE</string>
     <string name="label_splash_image">Splash image</string>
-    <string name="cancel">Отмена</string>
     <string name="get_started">Давайте начнём!</string>
     <string name="nothing_here">Тут ничего &#8230;</string>
 
     <!-- LSP, Diagnostics & Completions -->
-    <string name="msg_sdk_info_load_failed">Ошибка загрузки информации о SDK</string>
-    <string name="msg_fix_diagnostic">[Быстрое Решение]</string>
-    <string name="msg_no_code_actions">Быстрого Решения не найдено</string>
     <string name="msg_cannot_perform_fix">Невозможно применить Быстрое Решение</string>
-    <string name="msg_performing_fixes">Применение изменений&#8230;</string>
-    <string name="msg_code_actions">Быстрые Решения</string>
+    <string name="msg_performing_actions">Применение изменений&#8230;</string>
+    <string name="msg_code_actions">действия</string>
     <string name="msg_api_info_since">Начиная с API %d</string>
     <string name="msg_api_info_removed">Удалено в API %d</string>
     <string name="msg_api_info_deprecated">Устаревшее с API %d</string>
